Fix slide's size does not change when resize on Safari browser

--- a/app/components/modules/Home/SectionFive/PhotoSlider/PhotoSlider.module.scss
+++ b/app/components/modules/Home/SectionFive/PhotoSlider/PhotoSlider.module.scss
@@ -50,7 +50,6 @@
     img {
       min-width: 100%;
       max-width: 100%;
-      height: 100%;
       border-radius: 5px;
       transition: .3s;
       cursor: pointer;  
